# app_email_newsletter

./: issues.txt
be/: Cargo.toml  Dockerfile  configuration.yaml  readme.md  spec.yaml  sqlx-data.json
be/configuration/: base.yaml  local.yaml  production.yaml
be/migrations/: 20220602145824_create_subscriptions_table.sql  20220622151342_create_subscription_tokens_table.sql  20220706110244_rename_password_column.sql
be/scripts/: init_db.sh  init_redis.sh  tutorial.txt
be/src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
be/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
be/src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
be/src/routes/admin/: dashboard.rs
be/src/routes/admin/password/: get.rs  post.rs
be/src/routes/home/: home.html
be/src/routes/login/: get.rs  login.html  post.rs
be/tests/: health_check.rs
be/tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
