[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["LongLeXuan <xuanlongvts@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.0.1"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4"
]

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }