[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["LongLeXuan <xuanlongvts@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.0.1"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
chrono = "0.4.19"
log = "0.4.17"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
once_cell = "1.12.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.15.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.31"
anyhow = "1.0.58"
base64 = "0.13.0"
sha3 = "0.10.1"
argon2 = { version = "0.4.1", features = ["std"] }

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4"
]

[dev-dependencies]
fake = "2.4.3"
linkify = "0.8.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.81"
wiremock = "0.5.13"

